<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wifi_viz</name>
  <version>0.1.0</version>
  <description>An RViz display plugin for visualizing battery state as a bar graph overlay.</description>
  <maintainer email="mike@wimblerobotics.com">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_ros</buildtool_depend> Redundant if ament_cmake is present -->

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend> <!-- For Qt Gui/Widgets/Core -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/plugin_description.xml"/> <!-- Correct export tag -->
  </export>
</package>